--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -110,14 +110,324 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "96f317eb",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "url = \"https://books.toscrape.com/\"\n",
+        "\"\"\"\n",
+        "https://books.toscrape.com/catalogue/page-20.html -> to scrape all pages\n",
+        "\"\"\"\n",
+        "\n",
+        "response = requests.get(url)\n",
+        "response"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "id": "f730c522",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "soup = BeautifulSoup(response.content)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "00f1f1e8",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# which products we find \n",
+        "products = soup.find_all(\"li\", attrs = {\"class\":\"col-xs-6\"})\n",
+        "len(products)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "56a54b89",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#product title\n",
+        "products[0].find_all(\"a\")[1][\"title\"]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "bb1ab113",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#ratings -> convert into numeric\n",
+        "products[0].find_all(\"p\")[0][\"class\"][1]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "dd351ca9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#href\n",
+        "url + products[0].find_all(\"a\")[1][\"href\"]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "abf437f9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#price\n",
+        "float(products[0].find_all(\"p\")[1].get_text().replace(\"£\",\"\"))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 80,
+      "id": "74cde0c0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# genre\n",
+        "genre = None"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 81,
+      "id": "ea57edbb",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# availability\n",
+        "availability = None"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 82,
+      "id": "fcdbdda1",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# description\n",
+        "description = None"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 91,
+      "id": "8ca63e5f",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "book_dict = {}\n",
+        "k_value = 1\n",
+        "\n",
+        "for prod in products:\n",
+        "    #get title\n",
+        "    title = prod.find_all(\"a\")[1][\"title\"]\n",
+        "    #price\n",
+        "    price = float(prod.find_all(\"p\")[1].get_text().replace(\"£\",\"\"))\n",
+        "    #rating\n",
+        "    rating = prod.find_all(\"p\")[0][\"class\"][1]\n",
+        "    # genre\n",
+        "    genre = None\n",
+        "     # availability\n",
+        "    availability = None\n",
+        "     # description\n",
+        "    description = None\n",
+        "    # href\n",
+        "    href = url + prod.find_all(\"a\")[1][\"href\"]\n",
+        "    \n",
+        "#UPC, Title, Price (£), Rating, Genre, Availability, Description    \n",
+        "    book_dict[k_value] = {\"title\": title,\n",
+        "                             \"price (£)\": price,\n",
+        "                             \"rating\": rating,\n",
+        "                             \"genre\":genre,\n",
+        "                             \"availability\": availability,\n",
+        "                             \"description\": description,\n",
+        "                             \"href\": href\n",
+        "                             }\n",
+        "    \n",
+        "    k_value += 1\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0a79af02",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "book_dict"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9c265684",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\"\"\"\n",
+        "**Task**\n",
+        "\n",
+        "> Create a Python script using BeautifulSoup and pandas to scrape Books to Scrape book data, focusing on book ratings and genres.\n",
+        " \n",
+        "> The script should filter books by ratings and genres. \n",
+        "\n",
+        "> Script structure data in a pandas table for further analysis.\n",
+        "\n",
+        "\"\"\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c3d96987",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# def scrape_books(min_rate, max_price):\n",
+        "# > scrape book data from the \"Books to Scrape\" website\n",
+        "# > return a `pandas` DataFrame with the following columns: UPC, Title, Price (£), Rating, Genre, Availability, Description\n",
+        "\n",
+        "# execute this script to scrape data with min_rate = 4.0 & max_price = £ 20. \n",
+        "\n",
+        "\n",
+        "#def scrape_books(min_rate, max_price):\n",
+        "\n",
+        "##### import all modules, seturl etc...\n",
+        "\n",
+        "import requests, time, random\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "### 1a make it dynamic so to account for all pages (and not the first 2 results)\n",
+        "\n",
+        "response_list=[]\n",
+        "for i in range(1,5):\n",
+        "    response = requests.get(f\"https://books.toscrape.com/catalogue/page-{i}.html\")\n",
+        "    \n",
+        "    if response.status_code == 200:\n",
+        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "        response_list.append(soup)\n",
+        "        \n",
+        "    else:\n",
+        "        print(f\"Failed to get #{i}\")\n",
+        "        \n",
+        "    time.sleep(random.uniform(0.5, 2))\n",
+        "\n",
+        "\n",
+        "# 3. create pandas with the dictionary\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "27e97745",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### make a list of products\n",
+        "\n",
+        "book_dict = {}\n",
+        "k_value = 1\n",
+        "\n",
+        "for page in response_list:\n",
+        "    products = soup.find_all(\"li\", attrs = {\"class\":\"col-xs-6\"})\n",
+        "    for prod in products:\n",
+        "        #get title\n",
+        "        title = prod.find_all(\"a\")[1][\"title\"]\n",
+        "        #price\n",
+        "        price = float(prod.find_all(\"p\")[1].get_text().replace(\"£\",\"\"))\n",
+        "        #rating\n",
+        "        rating = prod.find_all(\"p\")[0][\"class\"][1]\n",
+        "        # href\n",
+        "        url=\"https://books.toscrape.com/catalogue/\"\n",
+        "        href = url + prod.find_all(\"a\")[1][\"href\"]\n",
+        "        extra = BeautifulSoup(requests.get(href).content, 'html.parser')\n",
+        "        # genre\n",
+        "        genre = extra.find_all(\"ul\")[0]\n",
+        "        genre = genre.find_all(\"li\")[2].get_text().strip()\n",
+        "        # availability\n",
+        "        availability = extra.find_all(\"p\")[1].get_text().strip()\n",
+        "        # description\n",
+        "        description = extra.find_all(\"p\")[3].get_text()\n",
+        "        # UPC\n",
+        "        upc = extra.find_all(\"td\")[0].get_text()        \n",
+        "        #UPC, Title, Price (£), Rating, Genre, Availability, Description    \n",
+        "        book_dict[k_value] = {\"title\": title,\n",
+        "                                \"price (£)\": price,\n",
+        "                                \"rating\": rating,\n",
+        "                                \"genre\":genre,\n",
+        "                                \"availability\": availability,\n",
+        "                                \"description\": description,\n",
+        "                                \"href\": href,\n",
+        "                                \"UPC\": upc\n",
+        "                                }\n",
+        "        \n",
+        "        k_value += 1\n",
+        "    \n",
+        "display(book_dict)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0bf79dd6",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 2. filter the results by requirements\n",
+        "\n",
+        "s_book_data = pd.DataFrame.from_dict(book_dict, orient='index')\n",
+        "s_book_data[\"rating\"] = s_book_data[\"rating\"].map({\"One\":1, \"Two\":2, \"Three\":3, \"Four\":4, \"Five\":5})\n",
+        "\n",
+        "filtered_data = s_book_data[(s_book_data[\"rating\"] >= min_rate) & (s_book_data[\"price (£)\"] <= max_price)]\n",
+        "\n",
+        "# def scrape_books(min_rate, max_price):\n",
+        "# execute this script to scrape data with min_rate = 4.0 & max_price = £ 20.\n",
+        "\n",
+        "display(filtered_data)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c6f6841b",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import sbook\n",
+        "\n",
+        "sbook.scrape_books(4, 20)"
       ]
     }
   ],
@@ -140,7 +450,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.8.1"
     }
   },
   "nbformat": 4,
