Page number added

--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "id": "40359eee-9cd7-4884-bfa4-83344c222305",
    "metadata": {
     "id": "40359eee-9cd7-4884-bfa4-83344c222305"
@@ -140,7 +140,7 @@
     "\n",
     "    # Iterate through pages until there are no more books\n",
     "    for page_num in range(1, 51):  # Assuming 50 pages max\n",
-    "        url = base_url.format(page_num)\n",
+    "        url = 'http://books.toscrape.com/catalogue/page-' + str(page_num) + \".html\"\n",
     "        response = requests.get(url)\n",
     "        soup = BeautifulSoup(response.text, 'html.parser')\n",
     "        \n",
@@ -148,15 +148,16 @@
     "        book_items = soup.find_all('article', class_='product_pod')\n",
     "        \n",
     "        for book in book_items:\n",
+    "            \n",
     "            title = book.h3.a['title']\n",
     "            price_str = book.find('p', class_='price_color').text.strip()\n",
-    "            price = clean_price(price_str)  # Clean and convert price\n",
+    "            price = clean_price(price_str)\n",
     "            rating = convert_rating(book.p['class'][1])  # Extract star rating from the class name\n",
     "            \n",
     "            # Filtering based on min_rating and max_price\n",
     "            if rating >= min_rating and price <= max_price:\n",
     "                # Navigate to the book's page to extract additional details\n",
-    "                book_url = 'http://books.toscrape.com/catalogue/' + book.h3.a['href']\n",
+    "                book_url = 'http://books.toscrape.com/catalogue'\n",
     "                book_response = requests.get(book_url)\n",
     "                book_soup = BeautifulSoup(book_response.text, 'html.parser')\n",
     "                \n",
@@ -164,7 +165,8 @@
     "                books.append({\n",
     "                    'Title': title,\n",
     "                    'Price (£)': price,\n",
-    "                    'Rating': rating\n",
+    "                    'Rating': rating,\n",
+    "                    'Page' : page_num\n",
     "                })\n",
     "\n",
     "        # Stop scraping if no more books are found on the current page\n",
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "id": "83b569b4-b323-4606-8260-8b2eba31bd74",
    "metadata": {},
    "outputs": [
@@ -186,17 +188,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Title  Price (£)  Rating\n",
-      "0  Set Me Free      17.46       5\n",
-      "1  Set Me Free      17.46       5\n",
-      "2  Set Me Free      17.46       5\n",
-      "3  Set Me Free      17.46       5\n",
-      "4  Set Me Free      17.46       5\n"
+      "                                               Title  Price (£)  Rating  Page\n",
+      "0  The Coming Woman: A Novel Based on the Life of...      17.93       3     1\n",
+      "1     Starving Hearts (Triangular Trade Trilogy, #1)      13.99       2     1\n",
+      "2                                        Set Me Free      17.46       5     1\n",
+      "3                                        In Her Wake      12.84       1     2\n",
+      "4  The Four Agreements: A Practical Guide to Pers...      17.66       5     2\n"
      ]
     }
    ],
    "source": [
-    "df = scrape_books(min_rating=5, max_price=20)\n",
+    "df = scrape_books(min_rating=1, max_price=20)\n",
     "print(df.head())"
    ]
   },
@@ -206,7 +208,14 @@
    "id": "a048e498-82a9-4406-97c8-6dbcbcc3d8dc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#ratings = []\n",
+    "       #for rating in soup.select(\"p.star-rating\"):   \n",
+    "           #rating.append(rating.get(\"class\")[-1])\n",
+    "           #rating_num = convert_rating[rating]\n",
+    "           #ratings.append(rating_num)\n",
+    "       #ratings"
+   ]
   }
  ],
  "metadata": {
