--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 96,
    "id": "40359eee-9cd7-4884-bfa4-83344c222305",
    "metadata": {
     "id": "40359eee-9cd7-4884-bfa4-83344c222305"
@@ -129,17 +129,15 @@
     "\n",
     "# Helper function to clean and convert price to a float\n",
     "def clean_price(price_str):\n",
-    "    # Remove any non-numeric characters except for the decimal point\n",
     "    cleaned_price = re.sub(r'[^\\d\\.]', '', price_str)\n",
     "    return float(cleaned_price)\n",
     "\n",
-    "# Function to scrape book data from the Books to Scrape website\n",
     "def scrape_books(min_rating=4, max_price=20):\n",
     "    base_url = 'http://books.toscrape.com'\n",
     "    books = []\n",
     "\n",
     "    # Iterate through pages until there are no more books\n",
-    "    for page_num in range(1, 51):  # Assuming 50 pages max\n",
+    "    for page_num in range(1, 51):\n",
     "        url = 'http://books.toscrape.com/catalogue/page-' + str(page_num) + \".html\"\n",
     "        response = requests.get(url)\n",
     "        soup = BeautifulSoup(response.text, 'html.parser')\n",
@@ -152,12 +150,11 @@
     "            title = book.h3.a['title']\n",
     "            price_str = book.find('p', class_='price_color').text.strip()\n",
     "            price = clean_price(price_str)\n",
-    "            rating = convert_rating(book.p['class'][1])  # Extract star rating from the class name\n",
+    "            rating = convert_rating(book.p['class'][-1])  # Extract star rating from the class name\n",
     "            \n",
     "            # Filtering based on min_rating and max_price\n",
     "            if rating >= min_rating and price <= max_price:\n",
-    "                # Navigate to the book's page to extract additional details\n",
-    "                book_url = 'http://books.toscrape.com/catalogue'\n",
+    "                book_url = 'http://books.toscrape.com'\n",
     "                book_response = requests.get(book_url)\n",
     "                book_soup = BeautifulSoup(book_response.text, 'html.parser')\n",
     "                \n",
@@ -173,14 +170,13 @@
     "        if not book_items:\n",
     "            break\n",
     "\n",
-    "    # Create a DataFrame from the scraped book data\n",
     "    df = pd.DataFrame(books)\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 98,
    "id": "83b569b4-b323-4606-8260-8b2eba31bd74",
    "metadata": {},
    "outputs": [
@@ -200,21 +196,6 @@
    "source": [
     "df = scrape_books(min_rating=1, max_price=20)\n",
     "print(df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a048e498-82a9-4406-97c8-6dbcbcc3d8dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ratings = []\n",
-    "       #for rating in soup.select(\"p.star-rating\"):   \n",
-    "           #rating.append(rating.get(\"class\")[-1])\n",
-    "           #rating_num = convert_rating[rating]\n",
-    "           #ratings.append(rating_num)\n",
-    "       #ratings"
    ]
   }
  ],
