--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -116,7 +116,66 @@
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    base_url = \"https://www.imdb.com/search/title/\"\n",
+        "    params = {\n",
+        "        'title_type': title_type,\n",
+        "        'release_date': f\"{start_date},{end_date}\",\n",
+        "        'user_rating': f\"{user_rating},\",\n",
+        "        'start': 1\n",
+        "    }\n",
+        "    \n",
+        "    movie_data = []\n",
+        "    while True:\n",
+        "        response = requests.get(base_url, params=params)\n",
+        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "        \n",
+        "        movies = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "        if not movies:\n",
+        "            break\n",
+        "        \n",
+        "        for movie in movies:\n",
+        "            movie_nr = movie.find('span', class_='lister-item-index').text.strip('.')\n",
+        "            title = movie.h3.a.text\n",
+        "            year = movie.h3.find('span', class_='lister-item-year').text.strip('()')\n",
+        "            rating = movie.find('div', class_='inline-block ratings-imdb-rating')['data-value']\n",
+        "            runtime = movie.find('span', class_='runtime').text.strip(' min') if movie.find('span', class_='runtime') else None\n",
+        "            genre = movie.find('span', class_='genre').text.strip() if movie.find('span', class_='genre') else None\n",
+        "            description = movie.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "            director = movie.find('p', class_='').find_all('a')[0].text\n",
+        "            stars = ', '.join([a.text for a in movie.find('p', class_='').find_all('a')[1:]])\n",
+        "            votes = movie.find('span', attrs={'name': 'nv'})['data-value']\n",
+        "            gross = movie.find_all('span', attrs={'name': 'nv'})[1].text.strip('$M') if len(movie.find_all('span', attrs={'name': 'nv'})) > 1 else None\n",
+        "            \n",
+        "            movie_data.append({\n",
+        "                'Movie Nr': movie_nr,\n",
+        "                'Title': title,\n",
+        "                'Year': year,\n",
+        "                'Rating': rating,\n",
+        "                'Runtime (min)': runtime,\n",
+        "                'Genre': genre,\n",
+        "                'Description': description,\n",
+        "                'Director': director,\n",
+        "                'Stars': stars,\n",
+        "                'Votes': votes,\n",
+        "                'Gross ($M)': gross\n",
+        "            })\n",
+        "        \n",
+        "        next_page = soup.find('a', class_='lister-page-next next-page')\n",
+        "        if next_page:\n",
+        "            params['start'] += 50\n",
+        "        else:\n",
+        "            break\n",
+        "    \n",
+        "    return pd.DataFrame(movie_data)\n",
+        "\n",
+        "# Example usage\n",
+        "df = scrape_imdb('feature', 7.5, '1990-01-01', '1992-12-31')\n",
+        "print(df)"
       ]
     },
     {
@@ -163,6 +222,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -179,9 +241,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
